SERVER-27317 Fix closed socket when inserting Decimal128.

Move try statement so it catches exceptions thrown by QueryMessage constructor.