src/mongo/db/instance.cpp
@@ -206,14 +206,15 @@ void receivedCommand(OperationContext* txn,
 
     const int32_t responseToMsgId = message.header().getId();
 
-    DbMessage dbMessage(message);
-    QueryMessage queryMessage(dbMessage);
-
     CurOp* op = CurOp::get(txn);
-
     rpc::LegacyReplyBuilder builder{};
 
     try {
+        DbMessage dbMessage(message);
+
+        // Can throw, so make sure it's under the try statement.
+        QueryMessage queryMessage(dbMessage);
+
         // This will throw if the request is on an invalid namespace.
         rpc::LegacyRequest request{&message};
         // Auth checking for Commands happens later.
